Integrate Keycloak for user authentication and authorization, update user profile handling, and refactor follow/unfollow logic