@@ -3,62 +3,85 @@ package com.socialmedia.userservice.service;
 import com.socialmedia.userservice.dto.UserProfileDto;
 import com.socialmedia.userservice.entity.neo4j.UserNode;
 import com.socialmedia.userservice.exception.UserNotFoundException;
-import com.socialmedia.userservice.mapper.UserMapper;
 import com.socialmedia.userservice.repository.neo4j.UserGraphRepository;
-import com.socialmedia.userservice.repository.postgres.UserRepository;
+import com.socialmedia.userservice.repository.postgres.UserProfileRepository;
+import com.socialmedia.userservice.security.KeycloakUserContext;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class SocialGraphService {
     private final UserGraphRepository userGraphRepository;
-    private final UserRepository userRepository;
-    private final UserMapper userMapper;
+    private final UserProfileRepository userProfileRepository;
+    private final KeycloakUserContext userContext;
+    private final UserService userService;
 
-    public void followUser(Long followerId, Long followeeId) {
+
+    public void followUser(String followeeId) {
+        String followerId = userContext.getCurrentUserId();
+
         if (followerId.equals(followeeId))
             throw new IllegalArgumentException("User cannot follow themselves");
 
-        if (!userRepository.existsById(followerId) || !userRepository.existsById(followeeId))
-            throw new UserNotFoundException("One or both users not found");
+        if (!userProfileRepository.existsById(followeeId))
+            throw new UserNotFoundException("User to follow not found");
 
-        if (userGraphRepository.isFollowing(followerId, followeeId))
-            return;
+        if (userGraphRepository.isFollowing(followerId, followeeId)) return;
 
         userGraphRepository.createFollowRelationship(followerId, followeeId);
     }
 
-    public void unfollowUser(Long followerId, Long followeeId) {
+    public void unfollowUser(String followeeId) {
+        String followerId = userContext.getCurrentUserId();
+
         if (!userGraphRepository.isFollowing(followerId, followeeId))
             throw new IllegalStateException("Not following this user");
 
         userGraphRepository.deleteFollowRelationship(followerId, followeeId);
     }
 
-    public List<UserProfileDto> getFollowers(Long userId) {
+    public List<UserProfileDto> getFollowers(String userId) {
         List<UserNode> followerNodes = userGraphRepository.findFollowers(userId);
 
-        List<Long> followerIds = followerNodes.stream()
+        List<String> followerIds = followerNodes.stream()
                 .map(UserNode::getUserId)
                 .toList();
 
-        return userRepository.findAllById(followerIds).stream()
-                .map(userMapper::toUserProfileDto)
-                .toList();
+        return userProfileRepository.findAllById(followerIds).stream()
+                .map(profile -> UserProfileDto.builder()
+                        .id(profile.getId())
+                        .firstName(profile.getFirstName())
+                        .lastName(profile.getLastName())
+                        .bio(profile.getBio())
+                        .profilePictureUrl(profile.getProfilePictureUrl())
+                        .build())
+                .collect(Collectors.toList());
     }
 
-    public List<UserProfileDto> getFollowing(Long userId) {
+    public List<UserProfileDto> getFollowing(String userId) {
         List<UserNode> followingNodes = userGraphRepository.findFollowing(userId);
 
-        List<Long> followingIds = followingNodes.stream()
+        List<String> followingIds = followingNodes.stream()
                 .map(UserNode::getUserId)
                 .toList();
 
-        return userRepository.findAllById(followingIds).stream()
-                .map(userMapper::toUserProfileDto)
-                .toList();
+        return userProfileRepository.findAllById(followingIds).stream()
+                .map(profile -> UserProfileDto.builder()
+                        .id(profile.getId())
+                        .firstName(profile.getFirstName())
+                        .lastName(profile.getLastName())
+                        .bio(profile.getBio())
+                        .profilePictureUrl(profile.getProfilePictureUrl())
+                        .build())
+                .collect(Collectors.toList());
+    }
+
+    public boolean isFollowing(String followeeId) {
+        String followerId = userContext.getCurrentUserId();
+        return userGraphRepository.isFollowing(followerId, followeeId);
     }
 }
